--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,33 +1,24 @@
-
-
 .gif {
-  width:12% !important;
+  width: 12% !important;
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-/* 
-  margin-left: 42% !important;
-  margin-top: 3%; */
-      animation: mostrarGif 0.5s ease-in-out 3; /* duración y repeticiones de la animación */
-    }
-
-    @keyframes mostrarGif {
-      0% {
-        opacity: 0; /* empieza con opacidad cero */
-      }
-      100% {
-        opacity: 1; /* termina con opacidad completa */
-      }
-
+  animation: mostrarGif 0.5s ease-in-out 3; /* Duración y repeticiones de la animación */
 }
 
-
-
+@keyframes mostrarGif {
+  0% {
+    opacity: 0; /* Empieza con opacidad cero */
+  }
+  100% {
+    opacity: 1; /* Termina con opacidad completa */
+  }
+}
 
 h2 {
   color: rgb(255, 255, 255);
-  padding-top: 6rem;
-  padding-bottom: 1.3rem;
+  padding-top: 6rem;       /* Ajusta el padding-top si es necesario */
+  padding-bottom: 1.3rem;  /* Ajusta el padding-bottom si es necesario */
   text-align: center;
   font-weight: bold;
   -webkit-text-stroke: 2px black;
@@ -45,57 +36,37 @@ h2 {
   margin: 50px 50px;
   line-height: 150px;
   height: 350px;
-}
-
-/* Asignamos las animaciones */
-
-.reboteIn_izquierda {
- 
   animation: reboteIn_izquierda 3s 1;
- 
 }
-
-
-
-/* Creamos la animación ReboteIn Izquierda (con keyframes) */
 
 @keyframes reboteIn_izquierda {
- 
   0% {
     opacity: 0;
     transform: translateX(-100vw);
   }
-  
   50% {
-    
     transform: translateX(30px);
     opacity: 1;
   }
-  
   70% {
-    
     transform: translateX(-10px);
-      
   }
-  
 }
 
-
-
-@media (min-width: 350px) and (max-width: 500px){
+@media (min-width: 350px) and (max-width: 500px) {
   .gif {
-    width:40% !important;
+    width: 40% !important;
     margin-left: 30% !important;
     margin-top: 3%;
-   }
+  }
 
-   h2 {
+  h2 {
     padding-top: 1.5rem;
   }
+
   .reboteIn_izquierda {
     margin: 20px 20px;
     height: 200px;
     background-image: url("https://i.postimg.cc/8zqn4z9J/mate.jpg");
   }
-
-  }
+}
